--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <main>
       <h1>Poulet DG (Directeur General) Recipe</h1>
       <img
-        src="pouletdg.jpg"
+        src="images/pouletdg.jpg"
         alt="image of a plate of fried chicken, fried
     plantains, and an assortment of vegetables"
       />
